memory percentage for java 11