@@ -3,9 +3,7 @@ FROM jenkins/jenkins:jdk11
 ENV JENKINS_DIR /usr/share/jenkins/ref
 
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false \
-                -XX:+UnlockExperimentalVMOptions \
-                -XX:+UseCGroupMemoryLimitForHeap \
-                -XX:MaxRAMFraction=2
+                -XX:MaxRAMPercentage=50
 
 USER root
 
